# ECE_522_Proj2

./: .gitignore  README.md  Report.md  bench_graph.py
benches/: avl_baseline.rs  (+2 more)
project2/: Cargo.toml
project2/benches/: rb_baseline.rs
project2/results/criterion/AVLTree Baseline Insert/Insert/10000/base/: benchmark.json
project2/results/criterion/AVLTree Baseline Insert/Insert/10000/new/: estimates.json
project2/results/criterion/AVLTree Baseline Insert/Insert/100000/base/: benchmark.json
project2/results/criterion/AVLTree Baseline Insert/Insert/100000/new/: sample.json  tukey.json
project2/results/criterion/AVLTree Baseline Insert/Insert/130000/base/: benchmark.json
project2/results/criterion/AVLTree Baseline Insert/Insert/130000/new/: estimates.json
project2/results/criterion/AVLTree Baseline Insert/Insert/40000/base/: sample.json
project2/results/criterion/AVLTree Baseline Insert/Insert/40000/new/: tukey.json
project2/results/criterion/AVLTree Baseline Insert/Insert/70000/base/: tukey.json
project2/results/criterion/AVLTree Baseline Insert/Insert/report/: index.html
project2/results/criterion/AVLTree Baseline Search/Search lowest/1000/base/: benchmark.json
project2/results/criterion/AVLTree Insert/report/: index.html
project2/results/criterion/AVLTree Search/report/: index.html
project2/results/criterion/RBTree Baseline Search/report/: index.html
project2/results/criterion/RBTree Insert/Insert/report/: index.html
project2/results/criterion/RBTree Insert/report/: index.html
project2/src/: avl_tree.rs  main.rs  redblack_tree.rs
(+231 files in other folders)
